# BotHS

./: .gitignore  LICENSE  README.md  pyproject.toml
Bot/: bot.py
BotHS/: requirements.txt
boths/: __main__.py
static_messages/: rules.md
